fix align of contacts

--- a/src/components/Contacts/contact.scss
+++ b/src/components/Contacts/contact.scss
@@ -20,6 +20,9 @@
     padding-left: 9%;
     padding-right: 9%;
     flex-wrap: wrap;
+    @media (max-width: 700px) {
+      justify-content: center;
+    }
 
     & .inputs {
       display: flex;
